[Task] Swagger config